<resources>
    <string name="app_name">FoodDay</string>

    <!--  Onboarding   -->
    <string name="onboarding_title">Your Smart Meal Planner</string>
    <string name="onboarding_body">Plan your meals, save time, and eat healthier every day</string>
    <string name="onboarding_button">Get Started</string>
    <string name="register_title">Register Screen</string>

    <!--    Auth    -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!--    Login    -->
    <string name="login_title">Hi \nPlease Login</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="or_divider">Or sign in with</string>
    <string name="login_google">Google</string>
    <string name="login_facebook">Facebook</string>
    <string name="dont_have_account">Don\'t have an account yet? </string>

    <!--    Sign Up-->
    <string name="sign_up_title">Create \nAccount</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="full_Name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>

    <!--    Forget Password    -->
    <string name="forget_password_title">Forget \nPassword</string>
    <string name="reset_password_btn">Reset Password</string>

    <!-- Custom error messages -->
    <string name="weak_password_error">The password is too weak.</string>
    <string name="email_already_in_use_error">An account already exists with this email address.</string>
    <string name="invalid_email_error">The email address is not valid.</string>
    <string name="operation_not_allowed_error">This email address is not allowed.</string>
    <string name="network_error">Please check your internet connection.</string>
    <string name="generic_error">An error occurred, please try again later.</string>
    <string name="invalid_credentials_error">The email or password is incorrect.</string>
    <string name="user_disabled_error">Your account has been disabled.</string>
    <string name="account_exists_with_different_credentials_error">An account already exists with a different credential.</string>
    <string name="no_user_record_error">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="auth_header_image">Auth Header Image</string>
    <string name="have_a_nice_day">Have A Nice Day</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Meal_of_day">Meal OF Day</string>
    <string name="app_developer">Karam Salama</string>
    <string name="meal_image_desc">Image OF Meal Of The Day</string>
    <string name="categories">Categories</string>
    <string name="breakfast">Breakfast</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="areas">Areas</string>
    <string name="mealname">mealName</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="plans">Plans</string>
    <string name="loading">Loading...</string>
    <string name="search_by_category_area_or_ingredient">Search by category, area or ingredient</string>
    <string name="common_ingredients">Common Ingredients</string>
    <string name="countries">Countries</string>
    <string name="Search_by_Country_Category_or_Ingredient">Search by Country, Category or Ingredient</string>
    <string name="logout">Logout</string>
    <string name="who_we_are">Who We Are</string>
    <string name="helping">Helping</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_plans">My Plans</string>
    <string name="karamsalama2024_gmail_com">karamsalama2024@gmail.com</string>
    <string name="karam_salama">Karam Salama</string>
    <string name="general">General</string>
    <string name="personal_information">Personal Information</string>
    <string name="todo">TODO</string>
    <string name="do_you_want_to_logout">Do you want to Logout?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>


    <string name="about_us">About Us</string>

    <string name="about_description" formatted="false">
    This app was fully developed by me\n
    to help users manage their meals efficiently.\n
    Every feature, from design to development,\n
    was built with dedication and passion.
    </string>

    <string name="linkedIn">Follow me on LinkedIn</string>
    <string name="facebook">Follow me on Facebook</string>
    <string name="instagram">Follow me on Instagram</string>
    <string name="mail_mail_com">mail@mail.com</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_email">Edit Email</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="skip">Continue as Guest</string>
    <string name="verification_prompt">Don\'t worry, just enter your email, and we\'ll send a link to verify your account.</string>


    <string-array name="meal_types">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>


    <string name="facebook_app_id">4081644225387550</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">e377b0d6fd6196ad5d1f3f550e85461f</string>
    <string name="add_to_plan">Add to Plan</string>
    <string name="you_need_to_log_in_to_access_this_feature">You need to log in to access this feature.</string>
    <string name="no_weekly_plans_available">No weekly plans available</string>
    <string name="no_favorite_meals">No favorite meals</string>
    <string name="are_you_sure_you_want_to_delete_this_meal">Are you sure you want to delete this meal?</string>
    <string name="delete">Delete</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_have_successfully_registered">Registered successfully.</string>
    <string name="you_have_successfully_logged_in">Login successfully.</string>
    <string name="ok">Ok</string>
    <string name="password_reset_email_sent_check_your_inbox">Password reset email sent. Check your inbox.</string>

    <string name="delete_confirmation_title">Delete Confirmation</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this item?</string>
</resources>