<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/lightGrey"
    tools:context=".modules.settings.view.PersonalInformationFragment">

    <!-- Title: Personal Information -->
    <TextView
        android:id="@+id/tv_personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/personal_information"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Name Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/grey"
        app:hintTextColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/EditTextCursorTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/karam_salama"
            android:inputType="text"
            android:textColor="@color/grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Edit Name Icon -->
    <ImageView
        android:id="@+id/iv_edit_name"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/edit"
        app:tint="@color/grey"
        android:contentDescription="@string/edit_name"
        app:layout_constraintEnd_toEndOf="@id/name_input_layout"
        app:layout_constraintTop_toTopOf="@id/name_input_layout"
        app:layout_constraintBottom_toBottomOf="@id/name_input_layout"
        android:layout_marginEnd="8dp" />

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/grey"
        app:hintTextColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/EditTextCursorTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_mail_com"
            android:textColor="@color/grey"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Edit Email Icon -->
    <ImageView
        android:id="@+id/iv_edit_email"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/edit"
        app:tint="@color/grey"
        android:contentDescription="@string/edit_email"
        app:layout_constraintEnd_toEndOf="@id/email_input_layout"
        app:layout_constraintTop_toTopOf="@id/email_input_layout"
        app:layout_constraintBottom_toBottomOf="@id/email_input_layout"
        android:layout_marginEnd="8dp" />

    <!-- Title: Change Password -->
    <TextView
        android:id="@+id/tv_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout" />

    <!-- Current Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/current_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/grey"
        app:hintTextColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/tv_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        android:theme="@style/EditTextCursorTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- New Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/grey"
        app:hintTextColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/current_password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        android:theme="@style/EditTextCursorTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm New Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/grey"
        app:hintTextColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/new_password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        android:theme="@style/EditTextCursorTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_changes"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="75dp"
        android:text="@string/save_changes"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/inter_medium"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
